# 3photons-rust

./: Cargo.toml  README.md  VALIDATION.md  valeurs
.github/workflows/: ci.yml  main.yml  unstable.yml
reference/: res.data-features_  res.data-features_f32  res.data-features_faster-evgen  res.data-features_multi-threading  res.data-features_multi-threading,faster-threading  res.data-features_standard-random  res.data-features_standard-random,f32  res.data-features_standard-random,multi-threading  res.data-features_standard-random,multi-threading,faster-threading  stdout.log-features_f32  stdout.log-features_faster-evgen  stdout.log-features_multi-threading  stdout.log-features_multi-threading,faster-threading  stdout.log-features_standard-random  stdout.log-features_standard-random,f32  stdout.log-features_standard-random,multi-threading  stdout.log-features_standard-random,multi-threading,faster-threading
src/: config.rs  coupling.rs  evcut.rs  event.rs  evgen.rs  linalg.rs  main.rs  matelems.rs  momentum.rs  numeric.rs  output.rs  ranf.rs  resacc.rs  rescont.rs  resfin.rs  scalar.rs  spinor.rs
src/random/: mod.rs  ranf.rs  standard.rs
src/scheduling/: mod.rs  multi_threading.rs  sequential.rs
