[package]
name = "trois_photons"
version = "0.1.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]

[dependencies]
arrayref = "0.3"
chrono = "0.4"
error-chain = "0.12"
nalgebra = "0.15"
num-complex = "0.2"
num-traits = "0.2"

[features]
default = []

# Use faster algorithm for random unit vector generation
fast-sincos = []
