[package]
name = "trois_photons"
version = "0.1.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]


[features]
default = []
# Use single precision instead of double precision
f32 = []
# Use faster algorithm for random unit vector generation
fast-sincos = []
# Maximize multi-threaded performance at the expense of result reproducibility
faster-threading = []
# Parallelize the computation via multi-threading
multi-threading = ["rayon"]
# Disable photon sorting
no-photon-sorting = []
# Use a standard algorithm for random number generation
standard-random = ["rand", "xoshiro"]


[dependencies]
chrono = "0.4"
error-chain = "0.12"
nalgebra = "0.15"
num-complex = "0.2"
num-traits = "0.2"
# These deps are only needed when some features are enabled
rand = { version = "0.5", optional = true }
rayon = { version = "1.0", optional = true }
xoshiro = { version = "0.0.4", optional = true }


[profile.release]
# Aborting panics mean no app cleanup when a panic is encountered, but better
# compiler optimizations. For scientific computation, that's a good trade-off.
panic = "abort"
# Parallel code generation improves compilation performance but prevents some
# global optimizations. For this small project, the compilation performance
# benefit is small, so we would rather have more run-time performance
codegen-units = 1
# Always enabling debug info is more convenient for this use case
debug = true