[package]
name = "trois_photons"
version = "2.0.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2021"
rust-version = "1.61.0"


[features]
# Use single precision instead of double precision
f32 = []
# Use different event generation algorithms to improve performance
faster-evgen = []
# Maximize multi-threaded performance at the expense of result reproducibility
faster-threading = []
# Parallelize the computation via multi-threading
multi-threading = ["rayon"]
# Disable photon sorting
no-photon-sorting = []
# Use a standard algorithm for random number generation
standard-random = ["rand", "rand_xoshiro"]


[dependencies]
anyhow = "1.0"
chrono = "0.4"
prefix_num_ops = "0.1"
nalgebra = "0.32.2"
num-complex = "0.4"
num-traits = "0.2"
# These deps are only needed when some features are enabled
rand = { version = "0.8", features = ["min_const_gen"], optional = true }
rand_xoshiro = { version = "0.6", optional = true }
rayon = { version = "1.7", optional = true }


[profile.release]
# Aborting panics mean no app cleanup when a panic is encountered, but better
# compiler optimizations. For scientific computation, that's a good trade-off.
panic = "abort"
# Parallel code generation improves compilation performance but prevents some
# global optimizations. For this small project, the compilation performance
# benefit is small, so we would rather have more run-time performance
codegen-units = 1
# Always enabling debug info is more convenient for this use case
debug = true
